# NutritionDetector

./: .gitignore  pyproject.toml  train.py
.devcontainer/: devcontainer.json
.github/workflows/: azure-functions-app-python.yml  infrastructure-pipeline.yml
API/app/: config.py  controller.py  schemas.py
backend/: function_app.py  requirements.txt  start-fastapi.sh
backend/app/: __init__.py  controller.py  schemas.py
code-detection/: .gitignore  data.yaml  model_testing.py
code-detection/data/: README.md
data/: combine_data.py
infra/deploy/: dev.tfvars  main.tf  providers.tf  terraform.tfvars  variables.tf
